2008-02-09  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c:
    * src/ccm-display.h: Check if shared pixmap is supported when intialize XSHM
    * src/ccm-pixmap-image.c: Optimize image data refresh
    * src/ccm-pixmap-shm.c: if shared pixmap isn't supported (EXA) don't use 
                            pixmap copy only an XSHMGetImage                            

2008-02-07  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Don't draw window in mosaic, beginning of
                                   event mouse proxy.
    * plugins/mosaic/ccm-mosaic.plugin.desktop.in: Set shadow in depends.

2008-02-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Some work around areas paint. 
    * src/ccm-pixmap-buffered-image.c: Backport fixes from shm buffered
    * src/ccm-pixmap-buffered-shm.c: Fixe typo
    * src/ccm-screen.c: Disable subtract opaque region when filtered damage is
                        disabled
    * src/ccm-window.c: Check name of child window if fail for frame window.

2008-02-05  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Some work around areas paint.
    
    * src/ccm-drawable.c:
    * src/ccm-window.c: Fix crash on get geometry on resize.

    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-pixmap-shm.c: Fix crash if ccm can't create SHM ressource.
    
2008-02-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Clip with damaged screen areas on shade draw.
                                   Create mosaic areas on each screen paint.
                                   
    * src/ccm-screen.c: Don't manage metacity allow event window.

2008-02-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac:
    * plugins/Makefile.am:
    * plugins/mosaic/Makefile.am:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/mosaic/ccm-mosaic.h: